# Reward-Hacking-Resistant-RL-Environment-for-ML-Systems

./: .gitignore  README.md  conftest.py  experiments_eval.py  experiments_extra.py  experiments_extra_plot.py  experiments_plot.py  pyproject.toml
benchmarks/: benchmark_moe.py
hacks/: hack_demo.py
judge/: checksums.json  hidden_runner.py  hidden_tests.py  judge.py  tamper_check.py
prompts/: task.md
scripts/: run_benchmark.sh  run_judge.sh  run_plots.sh  run_tests.sh  setup_vast.sh
solution/: solution.py
src/moe_env/: __init__.py  reference.py  types.py  utils.py
tests/: test_public_correctness.py  test_public_edge_cases.py
