[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "moe-env"
version = "0.1.0"
description = "Correctness-preserving sparse MoE forward operator RL environment"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "numpy>=1.24",
    "pytest>=7.4",
    "pytest-timeout>=2.1",
]

[project.optional-dependencies]
triton = ["triton>=2.2.0"]
plot = ["matplotlib>=3.8"]
dev = ["ruff", "mypy"]

[tool.hatch.build.targets.wheel]
packages = ["src/moe_env"]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 120
addopts = "-v --tb=short"
